# video-surveillance

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  app.cpp  keyframe.cpp  netcam.cpp
apps/: CMakeLists.txt
apps/nvr/: CMakeLists.txt  config.h  main.cpp
av/: CMakeLists.txt  common.cpp  common.h  decoder.cpp  decoder.h  demuxer.cpp  demuxer.h  encoder.cpp  encoder.h  exception.cpp  exception.h  frame.cpp  frame.h  key_frame_saver.cpp  key_frame_saver.h  muxer.cpp  muxer.h  output.cpp  output.h  packet.cpp  packet.h  scaler.cpp  scaler.h
common/: CMakeLists.txt  exception.cpp  exception.h
cv/: CMakeLists.txt  common.cpp  common.h  motion_detector.cpp  motion_detector.h
inc/: common.h  decoder.h  demuxer.h  display.h  encoder.h  exception.h  frame.h  motion_detector.h  motion_estimator.h  muxer.h  output.h  packet.h  recorder.h  scaler.h
src/: CMakeLists.txt  common.cpp  decoder.cpp  demuxer.cpp  display.cpp  encoder.cpp  frame.cpp  motion_detector.cpp  motion_estimator.cpp  muxer.cpp  output.cpp  packet.cpp  scaler.cpp
tests/: CMakeLists.txt  av_frame.test.cpp  av_packet.test.cpp  av_scaler.test.cpp  frame.test.cpp  scaler.test.cpp
